flux/infra/grafana/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: grafana-web
  namespace: grafana
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: grafana
  ports:
    - port: 3000
      protocol: TCP
      targetPort: http-grafana
      name: http-grafana
